feat: add customer info fethcing
